# hashjoins-meet-cxl

./: .gitignore  CMakeLists.txt  README.md  build.sh
scripts/20250805-scripts/: plot_pkfk_A.py  test_hc_join.sh  test_ratio.sh
src/: gen.c  join.c  memcpy_tps.c
src/algo/: CMakeLists.txt  nphj.c  nphj.h  phj.c  phj.h
src/inc/: CMakeLists.txt  common.c  common.h  memaccess.c  memaccess.h  store.h
